force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/SPEN_PostContactOutBoundDialTask__c.object-meta.xml
<CustomObject>
    <label>Post Quote Contact ODT</label>
    <nameField>
        <displayFormat>ODT-{0000}</displayFormat>
        <label>Post Quote Contact Outbound Dialler Task</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Quote Contact ODTs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>