force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEn_CallAttempted__c.field-meta.xml
<CustomField>
    <fullName>SPEn_CallAttempted__c</fullName>
    <label>Call Attempted</label>
    <type>Date</type>
</CustomField>