force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEN_Case__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Post_Contact_Outbound_Dialer_tasks</relationshipName>
    <type>Lookup</type>
</CustomField>