force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEN_CheckedTeamLead__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CheckedTeamLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked by Team Lead</label>
    <type>Checkbox</type>
</CustomField>