force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEN_ClaricalActions__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ClaricalActions__c</fullName>
    <label>Clarical Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>