force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEN_Contact__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Post Contact Outbound Dialer tasks</relationshipLabel>
    <relationshipName>Post_Contact_Outbound_Dialer_tasks</relationshipName>
    <type>Lookup</type>
</CustomField>