force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEN_CustomerContactStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerContactStatus__c</fullName>
    <label>Customer Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone call</fullName>
            </value>
            <value>
                <fullName>Successful – Email</fullName>
            </value>
            <value>
                <fullName>Case Accepted - With Delivery</fullName>
            </value>
            <value>
                <fullName>Designer Escalation Addressed</fullName>
            </value>
            <value>
                <fullName>Team Leader Escalation Addressed</fullName>
            </value>
            <value>
                <fullName>Attempted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>