force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEn_DateChecked__c.field-meta.xml
<CustomField>
    <fullName>SPEn_DateChecked__c</fullName>
    <label>Date Checked</label>
    <type>DateTime</type>
</CustomField>