force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEN_DesignerEscalation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DesignerEscalation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designer Escalation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Post_Contact_Outbound_Dialer_tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>