force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEN_DueDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DueDate__c</fullName>
    <formula>CreatedDate + 1</formula>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>