force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEN_EmailSentDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EmailSentDate__c</fullName>
    <label>Email Sent Date</label>
    <type>DateTime</type>
</CustomField>