force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEN_RefusedBMCSSurvey__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RefusedBMCSSurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refused BMCS Survey</label>
    <type>Checkbox</type>
</CustomField>