force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEN_RemovedfromBMCS_Survey__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RemovedfromBMCS_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Removed from BMCS Survey</label>
    <type>Checkbox</type>
</CustomField>