force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEN_SecondCallAttempted__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SecondCallAttempted__c</fullName>
    <label>Second Call Attempted</label>
    <type>Date</type>
</CustomField>