force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEN_SMSSentDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SMSSentDate__c</fullName>
    <label>SMS Sent Date</label>
    <type>DateTime</type>
</CustomField>