force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEN_Subject__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>