force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/SPEN_TaskType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TaskType__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post Quote Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>