force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/fields/TSPEN_TeamLeaderEscalation__c.field-meta.xml
<CustomField>
    <fullName>TSPEN_TeamLeaderEscalation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Leader Escalation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Post_Contact_Outbound_Dialer_tasks</relationshipName>
    <type>Lookup</type>
</CustomField>