force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Case__c</columns>
    <columns>SPEN_CustomerContactStatus__c</columns>
    <columns>SPEN_TaskType__c</columns>
    <columns>SPEN_DueDate__c</columns>
    <columns>SPEN_PredictedMoodScore__c</columns>
    <columns>SPEN_CheckedTeamLead__c</columns>
    <columns>SPEn_DateChecked__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_DueDate__c</field>
        <operation>equals</operation>
        <value>5/15/2024 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>