force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/listViews/Copy_of_All_PQC_s_16_02_24.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_PQC_s_16_02_24</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Case__c</columns>
    <columns>SPEN_CustomerContactStatus__c</columns>
    <columns>SPEN_TaskType__c</columns>
    <columns>SPEN_DueDate__c</columns>
    <columns>SPEN_PredictedMoodScore__c</columns>
    <columns>SPEN_CheckedTeamLead__c</columns>
    <columns>SPEn_DateChecked__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_DueDate__c</field>
        <operation>equals</operation>
        <value>2/10/2024 12:00 AM,2/13/2024 12:00 AM</value>
    </filters>
    <label>Copy of All PQC&apos;s 16.02.24</label>
</ListView>