force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/listViews/Fri_2nd_Feb_PQC_Calls_Team_View.listView-meta.xml
<ListView>
    <fullName>Fri_2nd_Feb_PQC_Calls_Team_View</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Case__c</columns>
    <columns>SPEN_CustomerContactStatus__c</columns>
    <columns>SPEN_TaskType__c</columns>
    <columns>SPEN_DueDate__c</columns>
    <columns>SPEN_PredictedMoodScore__c</columns>
    <columns>SPEN_CheckedTeamLead__c</columns>
    <columns>SPEn_DateChecked__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_DueDate__c</field>
        <operation>equals</operation>
        <value>2/2/2024 12:00 AM</value>
    </filters>
    <label>Fri 2nd Feb PQC Calls - Team View</label>
</ListView>