force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/listViews/Mon_5th_Feb_PQC_calls.listView-meta.xml
<ListView>
    <fullName>Mon_5th_Feb_PQC_calls</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Case__c</columns>
    <columns>SPEN_CustomerContactStatus__c</columns>
    <columns>SPEN_TaskType__c</columns>
    <columns>SPEN_DueDate__c</columns>
    <columns>SPEN_PredictedMoodScore__c</columns>
    <columns>SPEN_CheckedTeamLead__c</columns>
    <columns>SPEn_DateChecked__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_DueDate__c</field>
        <operation>equals</operation>
        <value>2/3/2024 12:00 AM</value>
    </filters>
    <label>Mon 5th Feb PQC calls</label>
</ListView>