force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/listViews/PQC_S16_02_2024.listView-meta.xml
<ListView>
    <fullName>PQC_S16_02_2024</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Case__c</columns>
    <columns>SPEN_CustomerContactStatus__c</columns>
    <columns>SPEN_TaskType__c</columns>
    <columns>SPEN_DueDate__c</columns>
    <columns>SPEN_PredictedMoodScore__c</columns>
    <columns>SPEN_CheckedTeamLead__c</columns>
    <columns>SPEn_DateChecked__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_DueDate__c</field>
        <operation>equals</operation>
        <value>2/16/2024 12:00 AM</value>
    </filters>
    <label>PQC&apos;S16.02.2024</label>
</ListView>