force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/listViews/SPEN_PostQuoteContactQueue_SPEN_PostContactOutBoundDialTask1.listView-meta.xml
<ListView>
    <fullName>SPEN_PostQuoteContactQueue_SPEN_PostContactOutBoundDialTask1</fullName>
    <filterScope>Queue</filterScope>
    <label>Post Quote Contact Queue</label>
    <queue>SPEN_PostQuoteContactQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>