force-app/main/default/objects/SPEN_PostContactOutBoundDialTask__c/listViews/Tues_13th_PQC_Calls.listView-meta.xml
<ListView>
    <fullName>Tues_13th_PQC_Calls</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Case__c</columns>
    <columns>SPEN_CustomerContactStatus__c</columns>
    <columns>SPEN_TaskType__c</columns>
    <columns>SPEN_DueDate__c</columns>
    <columns>SPEN_PredictedMoodScore__c</columns>
    <columns>SPEN_CheckedTeamLead__c</columns>
    <columns>SPEn_DateChecked__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_DueDate__c</field>
        <operation>equals</operation>
        <value>2/10/2024 12:00 AM,2/13/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>SPEN_DueDate__c</field>
        <operation>equals</operation>
        <value>2/13/2024 12:00 AM</value>
    </filters>
    <label>Tues 13th PQC Calls</label>
</ListView>